k8s/mesh/ingress/public-port-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: api-gateway-public-port
spec:
  selector:
    matchLabels:
      app: api-gateway
  portLevelMtls:
    "8081":
      mode: DISABLE
    "9464":
      mode: DISABLE
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: frontend-public-port
spec:
  selector:
    matchLabels:
      app: frontend
  portLevelMtls:
    "3000":
      mode: DISABLE
