k8s/mesh/ingress/gateway-public.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: automatic-system-public
  namespace: automatic-system
spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http-public
        protocol: HTTP

      hosts:
        - fizzi.tail2c9430.ts.net
