k8s/mesh/ingress/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: automatic-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.localhost"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.localhost"
      tls:
        mode: SIMPLE
        credentialName: automatic-system-local-tls
